# fulliautomatisk

./: .gitignore  Cargo.toml  README.md  in-build.sh  prod-build.sh  rust1804.Dockerfile
rust:12.04/: Dockerfile
src/: main.rs
