[package]
name = "fulliautomatisk"
version = "1.0.1"
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
description = "Asterisk DB change reporter"

[dependencies]
clap = "2.32.0"
lazy_static = "1.2.0"
notify = "4.0.6"
regex = "1.0.5"
reqwest = "0.9.4"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.32"
signal = "0.6.0"
time = "0.1.40"

[dependencies.rusqlite]
version = "0.15.0"
features = ["bundled"]

[dependencies.uuid]
version = "0.7.1"
features = ["v4"]
