[package]
name = "fulliautomatisk"
version = "1.0.2"
authors = ["FeÌlix Saparelli <felix@passcod.name>"]
description = "Asterisk DB change reporter"
edition = "2018"

[dependencies]
clap = "2.33.0"
lazy_static = "1.4.0"
notify = "4.0.14"
regex = "1.3.1"
reqwest = "0.9.22"
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.42"
signal = "0.7.0"
time = "0.1.42"

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]
